site: fix font flicker

--- a/apps/site/app.css
+++ b/apps/site/app.css
@@ -6,9 +6,6 @@ body {
   overflow-y: auto;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-
-  /* supposedly prevent layout shifts but in our case we need more.. */
-  font-display: optional;
 }
 
 body {
